fix nav gap

--- a/lesson4/css/small-4.css
+++ b/lesson4/css/small-4.css
@@ -43,7 +43,6 @@ header img {
 }
 
 header,
-nav,
 main,
 footer {
     max-width: 100%;
@@ -59,6 +58,7 @@ footer {
 
 /* see codePen - Responsive 'Hamburger Menu' */
 .navigation {
+    max-width: 100%;
     margin: 0 auto;
 	background-color: #BC986A;
 	list-style: none;
